/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package deliverif.controller;

/**
 *
 * @author zakaria
 */
public class GraphProcessor {

    public GraphProcessor() {
    }
    public void shortestPath() {
        
    }
    public void tsp() {
        
    }
}
